1999-11-18  Roland McGrath  <roland@baalperazim.frob.com>

	* mach-defpager: New directory.  See its ChangeLog.
	Makefile (prog-subdirs): Add mach-defpager.

1999-10-03  Roland McGrath  <roland@baalperazim.frob.com>

	* Makeconf [$(makemode) = misc]: If no installationdir and no targets,
	set makemode-instdir so it's not empty, to avoid expanding `$(dir)'.

1999-10-01  Roland McGrath  <roland@baalperazim.frob.com>

	* Makeconf [Decode makemode page]: Clean up variable usage in each
	cases, as follows:
	(installationdir): Don't test and set this directly.
	(makemode-instdir): New variable, set instead for each makemode.
	(linktarg): Don't this for each program-linking makemode.
	(targets): Make sure this is always set, i.e. = $(target) in singular
	modes.
	[$(makemode) != library] (progtarg): New variable.
	[$(makemode) != library] (linktarg): Set from $(progtarg), including
	.static versions.
	(installationdir): Test and default once, using $(makemode-instdir).
	[linking and dep rules]: Use $(linktarg) and $(progtarg) as
	appropriate instead of $(targets) or $(target).

1999-09-19  Roland McGrath  <roland@baalperazim.frob.com>

	* configure.in (enable_static_progs): Move sed translation of commas
	to spaces out of case stmt, so it applies to default too.

1999-09-18  Roland McGrath  <roland@baalperazim.frob.com>

	* Makeconf [$(makemode) != misc]: Use this to protect linking rules,
	so we don't define any rule for $(targets) if $(makemode) is misc.

	* Makefile: Revert last change; it is definitely wrong, and there is
	no verified bug that needs to be fixed at all.

1999-09-17  Thomas Bushnell, BSG  <tb@mit.edu>

	* Makeconf [Installation section]: Last change (9 Sep 1999) broke
	this.  Separate more clearly the library and non-library install
	rules.

	* Makefile ($(prog-subdirs) $(lib-subdirs), %-lndist, %-clean,
	%-relink, %-objs, %-install, %-install-headers, %-TAGS, %.d): Pass
	-e to sub-make, so that explicit prefix= args (etc.) get passed
	down correctly.
