@@ -1,22 +1,0 @@
-Fri Jul 22 10:38:17 1994  Michael I Bushnell  <mib@geech.gnu.ai.mit.edu>
-
-	* Makefile: Rewritten in accord with new scheme.
-
-Wed Jul 20 16:24:08 1994  Michael I Bushnell  <mib@geech.gnu.ai.mit.edu>
-
-	* Makefile (mkbootfs): Put -n after hostname for compat with
-	old broken rsh.
-	Use gcc literally instead of MIGHOSTCC.
-
-Tue Jul  5 14:22:00 1994  Michael I Bushnell  (mib@churchy.gnu.ai.mit.edu)
-
-	* Makefile (SRCS): New variable.
-
-Fri May  6 13:25:47 1994  Michael I Bushnell  (mib@geech.gnu.ai.mit.edu)
-
-	* Makefile (mkbootfs): Use MIGHOSTCC instead of CC.
-
-Thu May  5 19:06:21 1994  Michael I Bushnell  (mib@geech.gnu.ai.mit.edu)
-
-	* Makefile (mkbootfs): Call rsh with -n flag.
-
